--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mytube",
-  "version": "0.1.0",
+  "name": "yangtube",
+  "version": "1.0.0",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
