--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yangtube",
   "version": "1.0.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -36,7 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "react-video-thumbnail": "^0.1.3"
-  }
+  "devDependencies": {}
 }
